Thu Feb 24 18:37:45 CET 2005 (tk)
---------------------------------
  * libclamav/scanners.c: fix NULL pointer dereference in metadata scanner
			  (thanks to Nigel)	

Wed Feb 23 09:42:52 GMT 2005 (njh)
----------------------------------
  * clamav-milter:	Remove the pid file on exit
			Warn if sendmail can't be started when sending
				interception messages

Sun Feb 20 05:08:54 CET 2005 (tk)
---------------------------------
  * libclamav: add support for detection based on analysis of archive metadata
	       (currently only zip is supported)
  * libclamav/clamav.h, libclamav/matcher.c: handle cli_zip_node list
  * libclamav/readdb.c: load *.zmd (zip metadata signatures)
  * libclamav/str.c: new function cli_hex2num()

Fri Feb 18 21:29:16 GMT 2005 (njh)
----------------------------------
  * libclamav/message.c: Handle broken RFC2231 messages reported by Maxim
				Dounin <mdounin at rambler-co.ru>

Fri Feb 18 18:04:30 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Save separate bounces in separate files

Thu Feb 17 19:28:46 GMT 2005 (njh)
----------------------------------
  * libclamav/mbox.c:	Prescan some bounces before saving for full scanning

Thu Feb 17 16:13:29 CET 2005 (tk)
---------------------------------
  * freshclam/freshclam.c: do not call logg() in daemon_sighandler()
			   (patch by Trog)

Wed Feb 16 22:23:40 GMT 2005 (njh)
----------------------------------
  * libclamav:		s/BLOB/BLOBCLASS/ for Win32
			Don't put suffixes back on files to be scanned - it's
				no longer needed
			New mbox code is now properly ifdefed NEW_WORLD
				WARNING: it is still developers only code
			untar: check file close

Wed Feb 16 00:28:23 CET 2005 (tk)
---------------------------------
  * clamd/clamuko.c: properly unregister with Dazuko (patch by John Ogness
		     <jogness*antivir.de>)

Mon Feb 14 00:46:16 CET 2005 (tk)
---------------------------------
  V 0.83

Mon Feb 14 00:32:02 CET 2005 (tk)
---------------------------------