@@ -320,6 +320,7 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
     }
 
     while(zzip_dir_read(zdir, &zdirent)) {
+	files++;
 
 	if(!zdirent.d_name || !strlen(zdirent.d_name)) { /* Mimail fix */
 	    cli_dbgmsg("Zip: strlen(zdirent.d_name) == %d\n", strlen(zdirent.d_name));
@@ -333,7 +334,6 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
 	cli_dbgmsg("Zip: %s, crc32: 0x%x, encrypted: %d, compressed: %u, normal: %u, ratio: %d (max: %d)\n", zdirent.d_name, zdirent.d_crc32, encrypted, zdirent.d_csize, zdirent.st_size, zdirent.d_csize ? (zdirent.st_size / zdirent.d_csize) : 0, limits ? limits->maxratio : -1);
 
 	if(!zdirent.st_size) {
-	    files++;
 	    if(zdirent.d_crc32) {
 		cli_dbgmsg("Zip: Broken file or modified information in local header part of archive\n");
 		*virname = "Suspected.Zip";
@@ -361,7 +361,13 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
 	    if(mdata->compr >= 0 && mdata->compr != zdirent.d_compr)
 		continue;
 
-	    /* FIXME: add support for regex */
+	    if(mdata->fileno && mdata->fileno != files)
+		continue;
+
+	    if(mdata->maxdepth && *arec > mdata->maxdepth)
+		continue;
+
+	    /* TODO add support for regex */
 	    /*if(mdata->filename && !strstr(zdirent.d_name, mdata->filename))*/
 	    if(mdata->filename && strcmp(zdirent.d_name, mdata->filename))
 		continue;
@@ -388,7 +394,6 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
 
 	/* work-around for problematic zips (zziplib crashes with them) */
 	if(zdirent.d_csize <= 0 || zdirent.st_size < 0) {
-	    files++;
 	    cli_dbgmsg("Zip: Malformed archive detected.\n");
 	    *virname = "Suspected.Zip";
 	    ret = CL_VIRUS;
@@ -402,7 +407,6 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
         }
 
 	if(DETECT_ENCRYPTED && encrypted) {
-	    files++;
 	    cli_dbgmsg("Zip: Encrypted files found in archive.\n");
 	    lseek(desc, 0, SEEK_SET);
 	    ret = cli_scandesc(desc, virname, scanned, root, 0, 0);
@@ -418,7 +422,6 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
 	if(limits) {
 	    if(limits->maxfilesize && (zdirent.st_size > limits->maxfilesize)) {
 		cli_dbgmsg("Zip: %s: Size exceeded (%d, max: %ld)\n", zdirent.d_name, zdirent.st_size, limits->maxfilesize);
-		files++;
 		/* ret = CL_EMAXSIZE; */
 		if(BLOCKMAX) {
 		    *virname = "Zip.ExceededFileSize";
@@ -494,7 +497,6 @@ static int cli_scanzip(int desc, const char **virname, long int *scanned, const 
 	    fclose(tmp);
 	    tmp = NULL;
 	}
-	files++;
     }
 
     zzip_dir_close(zdir);
