@@ -1,3 +1,8 @@
+Sun Feb 27 02:26:42 CET 2005 (tk)
+---------------------------------
+  * libclamav: improve metadata scanner
+  * sigtool: add support for .zmd files
+
 Thu Feb 24 18:37:45 CET 2005 (tk)
 ---------------------------------
   * libclamav/scanners.c: fix NULL pointer dereference in metadata scanner
